--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,62 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+
+.weather-app-whapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.overview {
+  margin-bottom: 20px;
+}
+
+.weather-temperature img {
+  margin-right: 10px;
+  height: 64px;
+  width: 64px;
+}
+
+.weather-temperature strong {
+  color: blue;
+  font-size: 64px;
+  font-weight: 400px;
+  line-height: 1;
+}
+
+.weather-temperature .unit{
+    position: relative;
+    font-size: 16px;
+    top:-34px;
+}
+
+
+h1 {
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+}
+
+ul {
+  margin: 0%;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  color: rgb(135, 135, 135);
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
